# turtlebot3_formation

./: CMakeLists.txt  README.md  config.py  deploy.sh  package.xml  requirements.txt  setup.py  temp.txt
bash/: beast_wake_up.sh  network_config.sh
python/: controllers.py  detectors.py  path_planners.py  rrt.py  rvo.py
ros/: README.txt  navigation.py  plot_trajectory.py  rrt_navigation.py
ros/launch/: formation.launch  lf_navigation.launch  main.launch  move_base.launch  multirobot_detector.launch  multirobot_slam.launch  real_navigation.launch  robot.launch  send_clock.launch  slam.launch  spawn_person.launch  spawn_sdf.launch
ros/models/human/: human.config  human.sdf  human.urdf  human.urdf.xacro  props_global.urdf.xacro
ros/models/human/meshes/: human.dae
ros/models/unit_cylinder_0/: model.config  model.sdf
ros/rviz/: turtlebot3_formation_slam.rviz
ros/worlds/: actor.world  simple.world
