<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_formation</name>
  <version>1.0.0</version>
  <description>Miniproject for Mobile Robots</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ams288@cam.ac.uk">ams288</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>None</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/turtlebot3_formation</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>gazebo_plugins</depend>
  <depend>message_runtime</depend>
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>laser_proc</depend>
  <depend>rgbd_launch</depend>
  <depend>depthimage_to_laserscan</depend>
  <depend>rosserial_arduino</depend>
  <depend>rosserial_python</depend>
  <depend>rosserial_server</depend>
  <depend>rosserial_client</depend>
  <depend>rosserial_msgs</depend>
  <depend>amcl</depend>
  <depend>map_server </depend>
  <depend>move_base</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>compressed_image_transport</depend>
  <depend>image_view</depend>
  <depend>gmapping</depend>
  <depend>navigation</depend>
  <depend>interactive_markers</depend>
  <depend>turtlebot3</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>turtlebot3_simulations</depend>

  <exec_depend>gazebo</exec_depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/part1/ros/models"/>
  </export>
</package>
